// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App CartList Test get default CartList with event handler   1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  font-size: 24px !important;
  line-height: 1.5 !important;
  font-family: 'Montserrat Alternates' !important;
  font-weight: bold !important;
  color: #2E2E2E;
}

.c1 {
  color: #2E2E2E;
}

.c5 {
  font-size: 16px !important;
  line-height: 1.5 !important;
  font-family: 'Montserrat Alternates' !important;
  font-weight: bold !important;
  color: #2E2E2E;
}

.c6 {
  background-image: linear-gradient( transparent calc(100% - 1px), black 1px );
  background-repeat: no-repeat;
  background-size: 0% 100%;
  -webkit-transition: background-size 0.5s;
  transition: background-size 0.5s;
  color: #F62F5E;
}

.c6:hover {
  background-size: 100% 100%;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  width: 96;
  height: 96%;
  border: 1px solid #2E2E2E;
}

<div>
      <div
        class=""
      >
        <p
          class="MuiTypography-root c0 MuiTypography-body1"
          customvariant="header2"
        >
          3
           items in your cart
        </p>
        <table
          aria-label="cart table"
          class="MuiTable-root"
        >
          <thead
            class="MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
                scope="col"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  Image
                </p>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
                scope="col"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  Name
                </p>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
                scope="col"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  Size
                </p>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
                scope="col"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  Quantity
                </p>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
                scope="col"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  Price
                </p>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                scope="row"
              >
                <div
                  class="c2"
                  display="flex"
                >
                  <img
                    class="c3"
                    src="img.png"
                  />
                </div>
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                <div
                  class="c4"
                  display="flex"
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    Product name 1
                  </p>
                  <div
                    class="c2"
                    display="flex"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorError"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                    <p
                      animation="1"
                      class="MuiTypography-root c6 MuiTypography-body1"
                      customcolor="red"
                      data-testid="remove-cart-item-123123-btn"
                    >
                      Remove
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  M
                </p>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <div
                    class="c2"
                    display="flex"
                  >
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="decrease-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13H5v-2h14v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          min="0"
                          type="number"
                          value="1"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-289 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-290"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="increase-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class=""
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    32
                  </p>
                </div>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                scope="row"
              >
                <div
                  class="c2"
                  display="flex"
                >
                  <img
                    class="c3"
                    src="img.png"
                  />
                </div>
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                <div
                  class="c4"
                  display="flex"
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    Product name 2
                  </p>
                  <div
                    class="c2"
                    display="flex"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorError"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                    <p
                      animation="1"
                      class="MuiTypography-root c6 MuiTypography-body1"
                      customcolor="red"
                      data-testid="remove-cart-item-123122-btn"
                    >
                      Remove
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  L
                </p>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <div
                    class="c2"
                    display="flex"
                  >
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="decrease-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13H5v-2h14v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          min="0"
                          type="number"
                          value="2"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-289 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-290"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="increase-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class=""
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    32
                  </p>
                </div>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                scope="row"
              >
                <div
                  class="c2"
                  display="flex"
                >
                  <img
                    class="c3"
                    src="img.png"
                  />
                </div>
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                <div
                  class="c4"
                  display="flex"
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    Product name 3
                  </p>
                  <div
                    class="c2"
                    display="flex"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorError"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                    <p
                      animation="1"
                      class="MuiTypography-root c6 MuiTypography-body1"
                      customcolor="red"
                      data-testid="remove-cart-item-123124-btn"
                    >
                      Remove
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  XL
                </p>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <div
                    class="c2"
                    display="flex"
                  >
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="decrease-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13H5v-2h14v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          min="0"
                          type="number"
                          value="3"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-289 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-290"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="increase-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class=""
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    32
                  </p>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-AykKD hUuDfI"
    >
      <p
        class="MuiTypography-root sc-AykKC gGhakq MuiTypography-body1"
        customvariant="header2"
      >
        3
         items in your cart
      </p>
      <table
        aria-label="cart table"
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
              scope="col"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                Image
              </p>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
              scope="col"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                Name
              </p>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
              scope="col"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                Size
              </p>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
              scope="col"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                Quantity
              </p>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
              scope="col"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                Price
              </p>
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              scope="row"
            >
              <div
                class="sc-AykKD dQqOgI"
                display="flex"
              >
                <img
                  class="sc-AykKE cnZJyU"
                  src="img.png"
                />
              </div>
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <div
                class="sc-AykKD gIyoRA"
                display="flex"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  Product name 1
                </p>
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorError"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                  <p
                    animation="1"
                    class="MuiTypography-root sc-AykKC kcKcqS MuiTypography-body1"
                    customcolor="red"
                    data-testid="remove-cart-item-123123-btn"
                  >
                    Remove
                  </p>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                M
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD iNqslw"
                display="flex"
              >
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="decrease-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13H5v-2h14v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <div
                    class="MuiFormControl-root MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        min="0"
                        type="number"
                        value="1"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-289 MuiOutlinedInput-notchedOutline"
                        style="padding-left: 8px;"
                      >
                        <legend
                          class="PrivateNotchedOutline-legend-290"
                          style="width: 0.01px;"
                        >
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="increase-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD hUuDfI"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  32
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              scope="row"
            >
              <div
                class="sc-AykKD dQqOgI"
                display="flex"
              >
                <img
                  class="sc-AykKE cnZJyU"
                  src="img.png"
                />
              </div>
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <div
                class="sc-AykKD gIyoRA"
                display="flex"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  Product name 2
                </p>
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorError"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                  <p
                    animation="1"
                    class="MuiTypography-root sc-AykKC kcKcqS MuiTypography-body1"
                    customcolor="red"
                    data-testid="remove-cart-item-123122-btn"
                  >
                    Remove
                  </p>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                L
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD iNqslw"
                display="flex"
              >
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="decrease-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13H5v-2h14v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <div
                    class="MuiFormControl-root MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        min="0"
                        type="number"
                        value="2"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-289 MuiOutlinedInput-notchedOutline"
                        style="padding-left: 8px;"
                      >
                        <legend
                          class="PrivateNotchedOutline-legend-290"
                          style="width: 0.01px;"
                        >
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="increase-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD hUuDfI"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  32
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              scope="row"
            >
              <div
                class="sc-AykKD dQqOgI"
                display="flex"
              >
                <img
                  class="sc-AykKE cnZJyU"
                  src="img.png"
                />
              </div>
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <div
                class="sc-AykKD gIyoRA"
                display="flex"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  Product name 3
                </p>
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorError"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                  <p
                    animation="1"
                    class="MuiTypography-root sc-AykKC kcKcqS MuiTypography-body1"
                    customcolor="red"
                    data-testid="remove-cart-item-123124-btn"
                  >
                    Remove
                  </p>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                XL
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD iNqslw"
                display="flex"
              >
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="decrease-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13H5v-2h14v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <div
                    class="MuiFormControl-root MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        min="0"
                        type="number"
                        value="3"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-289 MuiOutlinedInput-notchedOutline"
                        style="padding-left: 8px;"
                      >
                        <legend
                          class="PrivateNotchedOutline-legend-290"
                          style="width: 0.01px;"
                        >
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="increase-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD hUuDfI"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  32
                </p>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App CartList Test get default CartList with mock data   1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  font-size: 24px !important;
  line-height: 1.5 !important;
  font-family: 'Montserrat Alternates' !important;
  font-weight: bold !important;
  color: #2E2E2E;
}

.c1 {
  color: #2E2E2E;
}

.c5 {
  font-size: 16px !important;
  line-height: 1.5 !important;
  font-family: 'Montserrat Alternates' !important;
  font-weight: bold !important;
  color: #2E2E2E;
}

.c6 {
  background-image: linear-gradient( transparent calc(100% - 1px), black 1px );
  background-repeat: no-repeat;
  background-size: 0% 100%;
  -webkit-transition: background-size 0.5s;
  transition: background-size 0.5s;
  color: #F62F5E;
}

.c6:hover {
  background-size: 100% 100%;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  width: 96;
  height: 96%;
  border: 1px solid #2E2E2E;
}

<div>
      <div
        class=""
      >
        <p
          class="MuiTypography-root c0 MuiTypography-body1"
          customvariant="header2"
        >
          3
           items in your cart
        </p>
        <table
          aria-label="cart table"
          class="MuiTable-root"
        >
          <thead
            class="MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
                scope="col"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  Image
                </p>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
                scope="col"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  Name
                </p>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
                scope="col"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  Size
                </p>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
                scope="col"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  Quantity
                </p>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
                scope="col"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  Price
                </p>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                scope="row"
              >
                <div
                  class="c2"
                  display="flex"
                >
                  <img
                    class="c3"
                    src="img.png"
                  />
                </div>
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                <div
                  class="c4"
                  display="flex"
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    Product name 1
                  </p>
                  <div
                    class="c2"
                    display="flex"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorError"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                    <p
                      animation="1"
                      class="MuiTypography-root c6 MuiTypography-body1"
                      customcolor="red"
                      data-testid="remove-cart-item-123123-btn"
                    >
                      Remove
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  M
                </p>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <div
                    class="c2"
                    display="flex"
                  >
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="decrease-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13H5v-2h14v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          min="0"
                          type="number"
                          value="1"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-153 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-154"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="increase-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class=""
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    32
                  </p>
                </div>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                scope="row"
              >
                <div
                  class="c2"
                  display="flex"
                >
                  <img
                    class="c3"
                    src="img.png"
                  />
                </div>
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                <div
                  class="c4"
                  display="flex"
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    Product name 2
                  </p>
                  <div
                    class="c2"
                    display="flex"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorError"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                    <p
                      animation="1"
                      class="MuiTypography-root c6 MuiTypography-body1"
                      customcolor="red"
                      data-testid="remove-cart-item-123122-btn"
                    >
                      Remove
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  L
                </p>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <div
                    class="c2"
                    display="flex"
                  >
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="decrease-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13H5v-2h14v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          min="0"
                          type="number"
                          value="2"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-153 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-154"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="increase-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class=""
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    32
                  </p>
                </div>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                scope="row"
              >
                <div
                  class="c2"
                  display="flex"
                >
                  <img
                    class="c3"
                    src="img.png"
                  />
                </div>
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                <div
                  class="c4"
                  display="flex"
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    Product name 3
                  </p>
                  <div
                    class="c2"
                    display="flex"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorError"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                      />
                    </svg>
                    <p
                      animation="1"
                      class="MuiTypography-root c6 MuiTypography-body1"
                      customcolor="red"
                      data-testid="remove-cart-item-123124-btn"
                    >
                      Remove
                    </p>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <p
                  class="MuiTypography-root c1 MuiTypography-body1"
                >
                  XL
                </p>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class="c7"
                  display="flex"
                >
                  <div
                    class="c2"
                    display="flex"
                  >
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="decrease-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13H5v-2h14v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                    <div
                      class="MuiFormControl-root MuiTextField-root"
                    >
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          min="0"
                          type="number"
                          value="3"
                        />
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-153 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-154"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                    <button
                      class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                      data-testid="increase-quantity-btn"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiFab-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
              >
                <div
                  class=""
                >
                  <p
                    class="MuiTypography-root c5 MuiTypography-body1"
                    customvariant="header3"
                  >
                    32
                  </p>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-AykKD hUuDfI"
    >
      <p
        class="MuiTypography-root sc-AykKC gGhakq MuiTypography-body1"
        customvariant="header2"
      >
        3
         items in your cart
      </p>
      <table
        aria-label="cart table"
        class="MuiTable-root"
      >
        <thead
          class="MuiTableHead-root"
        >
          <tr
            class="MuiTableRow-root MuiTableRow-head"
          >
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
              scope="col"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                Image
              </p>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft"
              scope="col"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                Name
              </p>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
              scope="col"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                Size
              </p>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
              scope="col"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                Quantity
              </p>
            </th>
            <th
              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter"
              scope="col"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                Price
              </p>
            </th>
          </tr>
        </thead>
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              scope="row"
            >
              <div
                class="sc-AykKD dQqOgI"
                display="flex"
              >
                <img
                  class="sc-AykKE cnZJyU"
                  src="img.png"
                />
              </div>
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <div
                class="sc-AykKD gIyoRA"
                display="flex"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  Product name 1
                </p>
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorError"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                  <p
                    animation="1"
                    class="MuiTypography-root sc-AykKC kcKcqS MuiTypography-body1"
                    customcolor="red"
                    data-testid="remove-cart-item-123123-btn"
                  >
                    Remove
                  </p>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                M
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD iNqslw"
                display="flex"
              >
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="decrease-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13H5v-2h14v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <div
                    class="MuiFormControl-root MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        min="0"
                        type="number"
                        value="1"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-153 MuiOutlinedInput-notchedOutline"
                        style="padding-left: 8px;"
                      >
                        <legend
                          class="PrivateNotchedOutline-legend-154"
                          style="width: 0.01px;"
                        >
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="increase-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD hUuDfI"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  32
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              scope="row"
            >
              <div
                class="sc-AykKD dQqOgI"
                display="flex"
              >
                <img
                  class="sc-AykKE cnZJyU"
                  src="img.png"
                />
              </div>
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <div
                class="sc-AykKD gIyoRA"
                display="flex"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  Product name 2
                </p>
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorError"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                  <p
                    animation="1"
                    class="MuiTypography-root sc-AykKC kcKcqS MuiTypography-body1"
                    customcolor="red"
                    data-testid="remove-cart-item-123122-btn"
                  >
                    Remove
                  </p>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                L
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD iNqslw"
                display="flex"
              >
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="decrease-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13H5v-2h14v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <div
                    class="MuiFormControl-root MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        min="0"
                        type="number"
                        value="2"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-153 MuiOutlinedInput-notchedOutline"
                        style="padding-left: 8px;"
                      >
                        <legend
                          class="PrivateNotchedOutline-legend-154"
                          style="width: 0.01px;"
                        >
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="increase-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD hUuDfI"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  32
                </p>
              </div>
            </td>
          </tr>
          <tr
            class="MuiTableRow-root"
          >
            <th
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              scope="row"
            >
              <div
                class="sc-AykKD dQqOgI"
                display="flex"
              >
                <img
                  class="sc-AykKE cnZJyU"
                  src="img.png"
                />
              </div>
            </th>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
            >
              <div
                class="sc-AykKD gIyoRA"
                display="flex"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  Product name 3
                </p>
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorError"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                    />
                  </svg>
                  <p
                    animation="1"
                    class="MuiTypography-root sc-AykKC kcKcqS MuiTypography-body1"
                    customcolor="red"
                    data-testid="remove-cart-item-123124-btn"
                  >
                    Remove
                  </p>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <p
                class="MuiTypography-root sc-AykKC imIxhO MuiTypography-body1"
              >
                XL
              </p>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD iNqslw"
                display="flex"
              >
                <div
                  class="sc-AykKD dQqOgI"
                  display="flex"
                >
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="decrease-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13H5v-2h14v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <div
                    class="MuiFormControl-root MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        min="0"
                        type="number"
                        value="3"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-153 MuiOutlinedInput-notchedOutline"
                        style="padding-left: 8px;"
                      >
                        <legend
                          class="PrivateNotchedOutline-legend-154"
                          style="width: 0.01px;"
                        >
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                  <button
                    class="MuiButtonBase-root MuiFab-root MuiFab-sizeSmall MuiFab-secondary"
                    data-testid="increase-quantity-btn"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
            >
              <div
                class="sc-AykKD hUuDfI"
              >
                <p
                  class="MuiTypography-root sc-AykKC efSuTv MuiTypography-body1"
                  customvariant="header3"
                >
                  32
                </p>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App CartList Test get default CartList with no data   1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  font-size: 24px !important;
  line-height: 1.5 !important;
  font-family: 'Montserrat Alternates' !important;
  font-weight: bold !important;
  color: #2E2E2E;
}

<body>
    <div>
      <div
        class=""
      >
        <p
          class="MuiTypography-root c0 MuiTypography-body1"
          customvariant="header2"
        >
          0
           items in your cart
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-AykKD hUuDfI"
    >
      <p
        class="MuiTypography-root sc-AykKC gGhakq MuiTypography-body1"
        customvariant="header2"
      >
        0
         items in your cart
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
